[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbitlab"
version = "0.1.0"
description = "Educational orbital mechanics & N-body sandbox with energy-drift benchmarks."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "YOUR NAME"}]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.setuptools]
packages = ["orbitlab"]
